[PasswordGeneration] Improve change/confirm password field detection.

Use autocomplete attributes to discover change/confirm password fields when no
PasswordFormGenerationData is found for a possible password form.

BUG=716464

Review-Url: https://codereview.chromium.org/2917933002
Cr-Commit-Position: refs/heads/master@{#478250}

Former-commit-id: 6121d9064193b5d9eef9092425909b4e6cec3bcb